# cmake-learn

./: CMakeLists.txt  README.md  run.sh
include/: my_math.h  print_hello.h
src/: main.c
src/hello/: print_hello.c
src/my_math/: my_math.c
